# hiveplotlib-futbol

./: .gitignore  DATASETS.md  Makefile  PLAN.md  README.md  pyproject.toml
src/futbol_hiveplots/: __init__.py  data.py  inspect_schema.py  plot_lineups.py  plot_passes.py
