[project]
name = "futbol_hiveplots"
version = "0.1.0"
description = "Exploring hiveplotlib with football (soccer) passing data"
requires-python = ">=3.12"
dependencies = [
    "hiveplotlib",
    "statsbombpy",
    "pandas",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
# mplsoccer is only needed for the pitch-overlay comparison figures (the "before" to the
# hive plot's "after"); not required for the hive plots themselves.
pitch = [
    "mplsoccer",
]
# datashader backend for the dense whole-game views.
datashader = [
    "hiveplotlib[datashader]",
]
dev = [
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["futbol_hiveplots*"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# lighter than hiveplotlib's set on purpose; this is an exploratory prototype.
extend-select = ["B", "C4", "I", "NPY", "PD", "PERF", "PTH", "RET", "SIM", "UP", "W"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
